tests/coverage-output-gateway-v13.txt

> tadpole-os@0.0.0 test:coverage
> vitest run --coverage


[1m[46m RUN [49m[22m [36mv4.0.18 [39m[90mC:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os[39m
      [2mCoverage enabled with [22m[33mv8[39m

[90mstdout[2m | tests/server/gateway.test.ts[2m > [22m[2mGateway[2m > [22m[2magent config route should update agent
[22m[39m≡ƒæñ Updated Agent Config: Updated Agent (1)

[90mstdout[2m | tests/server/gateway.test.ts[2m > [22m[2mGateway[2m > [22m[2magent config route should initialize new agent
[22m[39m≡ƒæñ Updated Agent Config: Brand New (new-agent)

[90mstdout[2m | tests/server/gateway.test.ts[2m > [22m[2mGateway[2m > [22m[2magent config route should initialize specific agent IDs
[22m[39m≡ƒæñ Updated Agent Config: Updated Agent (1)
≡ƒæñ Updated Agent Config: New Agent (2)
≡ƒæñ Updated Agent Config: New Agent (3)

[90mstdout[2m | tests/server/gateway.test.ts[2m > [22m[2mGateway[2m > [22m[2magents route should return detailed list when agents exist
[22m[39m≡ƒæñ Updated Agent Config: Test (test-agent)

[90mstdout[2m | tests/server/gateway.test.ts[2m > [22m[2mGateway[2m > [22m[2mmessage route should trigger runner
[22m[39m≡ƒôí [Gateway] Received SendCommand for Agent 1
   - Model: undefined (undefined)
   - API Key present: false
   - Message: Hello...

stderr | tests/server/gateway.test.ts > Gateway > message route should trigger runner
Agent Run Failed: TypeError: Cannot read properties of undefined (reading 'success')
    at C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/server/gateway.ts:253:28
    at processTicksAndRejections (node:internal/process/task_queues:103:5)
    at C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/tests/server/gateway.test.ts:242:9
    at file:///C:/Users/Home%20Office_PC/.gemini/antigravity/playground/tadpole-os/node_modules/@vitest/runner/dist/index.js:915:20

[90mstdout[2m | tests/server/gateway.test.ts[2m > [22m[2mGateway[2m > [22m[2mengine kill route should execute cleanup
[22m[39m≡ƒÜ¿ EMERGENCY KILL SWITCH TRIGGERED

 [31mΓ¥»[39m tests/server/gateway.test.ts [2m([22m[2m17 tests[22m[2m | [22m[31m2 failed[39m[2m)[22m[32m 65[2mms[22m[39m
     [32mΓ£ô[39m should initialize with expected components[32m 7[2mms[22m[39m
     [32mΓ£ô[39m should setup basic routes[32m 5[2mms[22m[39m
     [32mΓ£ô[39m should broadcast heartbeat events[32m 3[2mms[22m[39m
     [32mΓ£ô[39m should broadcast to all connected clients[32m 1[2mms[22m[39m
     [32mΓ£ô[39m should handle start and stop lifecycle[32m 1[2mms[22m[39m
     [32mΓ£ô[39m health check route should return status ok[32m 2[2mms[22m[39m
     [32mΓ£ô[39m agents route should return agents list with specific agent details[32m 1[2mms[22m[39m
     [32mΓ£ô[39m agent config route should update agent[32m 7[2mms[22m[39m
     [32mΓ£ô[39m agent config route should initialize new agent[32m 1[2mms[22m[39m
     [32mΓ£ô[39m agent config route should initialize specific agent IDs[32m 4[2mms[22m[39m
     [32mΓ£ô[39m agents route should return detailed list when agents exist[32m 2[2mms[22m[39m
     [32mΓ£ô[39m message route should trigger runner[32m 17[2mms[22m[39m
[31m     [31m├ù[31m oversight decision route should notify oversight gate[39m[32m 2[2mms[22m[39m
     [32mΓ£ô[39m oversight ledger route should return data[32m 1[2mms[22m[39m
[31m     [31m├ù[31m oversight governance route should set governance[39m[32m 3[2mms[22m[39m
     [32mΓ£ô[39m oversight pending route should return data[32m 6[2mms[22m[39m
     [32mΓ£ô[39m engine kill route should execute cleanup[32m 1[2mms[22m[39m
[90mstdout[2m | tests/server/runner.test.ts
[22m[39m≡ƒÅ¢∩╕Å  [Governor] Service Activated. Monitoring network throughput.

[90mstdout[2m | tests/server/runner.test.ts[2m > [22m[2mAgentRunner[2m > [22m[2mshould return text response immediately
[22m[39m≡ƒöä Turn 1: Generating...

[90mstdout[2m | tests/server/runner.test.ts[2m > [22m[2mAgentRunner[2m > [22m[2mshould execute tool call and loop back
[22m[39m≡ƒöä Turn 1: Generating...

 [32mΓ£ô[39m tests/server/crypto.test.ts [2m([22m[2m4 tests[22m[2m)[22m[33m 1108[2mms[22m[39m
     [33m[2mΓ£ô[22m[39m encrypts and decrypts a message correctly [33m 305[2mms[22m[39m
     [33m[2mΓ£ô[22m[39m produces different ciphertexts for the same message (unique IV/Salt) [33m 412[2mms[22m[39m
stderr | src/pages/ModelManager.test.tsx > ModelManager Page > Vault Locking Logic > calls unlock when entering passphrase and clicking unlock
Warning: An update to ModelManager inside a test was not wrapped in act(...).

When testing, code that causes React state updates should be wrapped into act(...):

act(() => {
  /* fire events that update state */
});
/* assert on the output */

This ensures that you're testing the behavior the user would see in the browser. Learn more at https://reactjs.org/link/wrap-tests-with-act
    at ModelManager (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/ModelManager.tsx:25:79)

[90mstdout[2m | tests/server/runner.test.ts[2m > [22m[2mAgentRunner[2m > [22m[2mshould execute tool call and loop back
[22m[39m≡ƒöÆ Requesting oversight for tool: e9b69e7a-19de-4a31-ab03-39eac0a87393 (test-skill)

[90mstdout[2m | tests/server/runner.test.ts[2m > [22m[2mAgentRunner[2m > [22m[2mshould execute tool call and loop back
[22m[39mΓÜÖ∩╕Å Executing skill: test-skill

[90mstdout[2m | tests/server/runner.test.ts[2m > [22m[2mAgentRunner[2m > [22m[2mshould execute tool call and loop back
[22m[39m≡ƒöä Turn 2: Generating...

stderr | src/pages/Missions.test.tsx > Missions Page > renders the mission management header
Warning: An update to Missions inside a test was not wrapped in act(...).

When testing, code that causes React state updates should be wrapped into act(...):

act(() => {
  /* fire events that update state */
});
/* assert on the output */

This ensures that you're testing the behavior the user would see in the browser. Learn more at https://reactjs.org/link/wrap-tests-with-act
    at Missions (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/Missions.tsx:30:87)

stderr | src/pages/Missions.test.tsx > Missions Page > displays the new cluster modal when clicking New Mission
Warning: An update to Missions inside a test was not wrapped in act(...).

When testing, code that causes React state updates should be wrapped into act(...):

act(() => {
  /* fire events that update state */
});
/* assert on the output */

This ensures that you're testing the behavior the user would see in the browser. Learn more at https://reactjs.org/link/wrap-tests-with-act
    at Missions (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/Missions.tsx:30:87)

stderr | src/pages/OversightDashboard.test.tsx > OversightDashboard Page > calls the decision endpoint when approving an action
Warning: An update to OversightDashboard inside a test was not wrapped in act(...).

When testing, code that causes React state updates should be wrapped into act(...):

act(() => {
  /* fire events that update state */
});
/* assert on the output */

This ensures that you're testing the behavior the user would see in the browser. Learn more at https://reactjs.org/link/wrap-tests-with-act
    at OversightDashboard (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/OversightDashboard.tsx:23:67)

stderr | src/pages/OversightDashboard.test.tsx > OversightDashboard Page > calls the decision endpoint when approving an action
Warning: An update to OversightDashboard inside a test was not wrapped in act(...).

When testing, code that causes React state updates should be wrapped into act(...):

act(() => {
  /* fire events that update state */
});
/* assert on the output */

This ensures that you're testing the behavior the user would see in the browser. Learn more at https://reactjs.org/link/wrap-tests-with-act
    at OversightDashboard (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/OversightDashboard.tsx:23:67)

[90mstdout[2m | tests/server/runner.test.ts[2m > [22m[2mAgentRunner[2m > [22m[2mshould handle provider errors gracefully
[22m[39m≡ƒöä Turn 1: Generating...

 [32mΓ£ô[39m src/pages/ModelManager.test.tsx [2m([22m[2m6 tests[22m[2m)[22m[33m 832[2mms[22m[39m
Not implemented: Window's alert() method
stderr | src/pages/OversightDashboard.test.tsx > OversightDashboard Page > triggers the kill switch when button is clicked
Warning: An update to OversightDashboard inside a test was not wrapped in act(...).

When testing, code that causes React state updates should be wrapped into act(...):

act(() => {
  /* fire events that update state */
});
/* assert on the output */

This ensures that you're testing the behavior the user would see in the browser. Learn more at https://reactjs.org/link/wrap-tests-with-act
    at OversightDashboard (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/OversightDashboard.tsx:23:67)

stderr | src/pages/OversightDashboard.test.tsx > OversightDashboard Page > triggers the kill switch when button is clicked
Warning: An update to OversightDashboard inside a test was not wrapped in act(...).

When testing, code that causes React state updates should be wrapped into act(...):

act(() => {
  /* fire events that update state */
});
/* assert on the output */

This ensures that you're testing the behavior the user would see in the browser. Learn more at https://reactjs.org/link/wrap-tests-with-act
    at OversightDashboard (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/OversightDashboard.tsx:23:67)
Warning: An update to OversightDashboard inside a test was not wrapped in act(...).

When testing, code that causes React state updates should be wrapped into act(...):

act(() => {
  /* fire events that update state */
});
/* assert on the output */

This ensures that you're testing the behavior the user would see in the browser. Learn more at https://reactjs.org/link/wrap-tests-with-act
    at OversightDashboard (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/OversightDashboard.tsx:23:67)
Warning: An update to OversightDashboard inside a test was not wrapped in act(...).

When testing, code that causes React state updates should be wrapped into act(...):

act(() => {
  /* fire events that update state */
});
/* assert on the output */

This ensures that you're testing the behavior the user would see in the browser. Learn more at https://reactjs.org/link/wrap-tests-with-act
    at OversightDashboard (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/OversightDashboard.tsx:23:67)
Warning: An update to OversightDashboard inside a test was not wrapped in act(...).

When testing, code that causes React state updates should be wrapped into act(...):

act(() => {
  /* fire events that update state */
});
/* assert on the output */

This ensures that you're testing the behavior the user would see in the browser. Learn more at https://reactjs.org/link/wrap-tests-with-act
    at OversightDashboard (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/OversightDashboard.tsx:23:67)
Warning: An update to OversightDashboard inside a test was not wrapped in act(...).

When testing, code that causes React state updates should be wrapped into act(...):

act(() => {
  /* fire events that update state */
});
/* assert on the output */

This ensures that you're testing the behavior the user would see in the browser. Learn more at https://reactjs.org/link/wrap-tests-with-act
    at OversightDashboard (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/OversightDashboard.tsx:23:67)

 [32mΓ£ô[39m src/pages/OversightDashboard.test.tsx [2m([22m[2m5 tests[22m[2m)[22m[33m 967[2mms[22m[39m
     [33m[2mΓ£ô[22m[39m renders the dashboard with stats and pending actions [33m 342[2mms[22m[39m
 [32mΓ£ô[39m src/pages/EngineDashboard.test.tsx [2m([22m[2m4 tests[22m[2m)[22m[33m 1386[2mms[22m[39m
     [33m[2mΓ£ô[22m[39m renders telemetry metrics when online [33m 320[2mms[22m[39m
     [33m[2mΓ£ô[22m[39m updates progress bar widths based on metrics [33m 738[2mms[22m[39m
stderr | tests/server/runner.test.ts > AgentRunner > should handle provider errors gracefully
Runner Error: Error: API Rate Limit
    at C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/tests/server/runner.test.ts:97:40
    at file:///C:/Users/Home%20Office_PC/.gemini/antigravity/playground/tadpole-os/node_modules/@vitest/runner/dist/index.js:145:11
    at file:///C:/Users/Home%20Office_PC/.gemini/antigravity/playground/tadpole-os/node_modules/@vitest/runner/dist/index.js:915:26
    at file:///C:/Users/Home%20Office_PC/.gemini/antigravity/playground/tadpole-os/node_modules/@vitest/runner/dist/index.js:1243:20
    at new Promise (<anonymous>)
    at runWithTimeout (file:///C:/Users/Home%20Office_PC/.gemini/antigravity/playground/tadpole-os/node_modules/@vitest/runner/dist/index.js:1209:10)
    at file:///C:/Users/Home%20Office_PC/.gemini/antigravity/playground/tadpole-os/node_modules/@vitest/runner/dist/index.js:1653:37
    at Traces.$ (file:///C:/Users/Home%20Office_PC/.gemini/antigravity/playground/tadpole-os/node_modules/vitest/dist/chunks/traces.CCmnQaNT.js:142:27)
    at trace (file:///C:/Users/Home%20Office_PC/.gemini/antigravity/playground/tadpole-os/node_modules/vitest/dist/chunks/test.B8ej_ZHS.js:239:21)
    at runTest (file:///C:/Users/Home%20Office_PC/.gemini/antigravity/playground/tadpole-os/node_modules/@vitest/runner/dist/index.js:1653:12)

 [32mΓ£ô[39m tests/server/runner.test.ts [2m([22m[2m3 tests[22m[2m)[22m[33m 1593[2mms[22m[39m
     [33m[2mΓ£ô[22m[39m should execute tool call and loop back [33m 1032[2mms[22m[39m
     [33m[2mΓ£ô[22m[39m should handle provider errors gracefully [33m 507[2mms[22m[39m
stderr | src/pages/Missions.test.tsx > Missions Page > includes Marketing and Design in the department dropdown
Warning: An update to Missions inside a test was not wrapped in act(...).

When testing, code that causes React state updates should be wrapped into act(...):

act(() => {
  /* fire events that update state */
});
/* assert on the output */

This ensures that you're testing the behavior the user would see in the browser. Learn more at https://reactjs.org/link/wrap-tests-with-act
    at Missions (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/pages/Missions.tsx:30:87)

 [32mΓ£ô[39m src/pages/Missions.test.tsx [2m([22m[2m3 tests[22m[2m)[22m[33m 1970[2mms[22m[39m
     [33m[2mΓ£ô[22m[39m includes Marketing and Design in the department dropdown [33m 1546[2mms[22m[39m
Error: Neural Spike Detected! Simulation crash.
    at BuggyComponent (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/components/ErrorBoundary.test.tsx:8:15)
    at renderWithHooks (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:16305:18)
    at mountIndeterminateComponent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:20074:13)
    at beginWork (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:21587:16)
    at HTMLUnknownElement.callCallback (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:4164:14)
    at HTMLUnknownElement.callTheUserObjectsOperation (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\generated\idl\EventListener.js:26:30)
    at innerInvokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:360:16)
    at invokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:296:3)
    at HTMLUnknownElementImpl._dispatch (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:243:9)
    at HTMLUnknownElementImpl.dispatchEvent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:114:17)
Error: Neural Spike Detected! Simulation crash.
    at BuggyComponent (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/components/ErrorBoundary.test.tsx:8:15)
    at renderWithHooks (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:16305:18)
    at mountIndeterminateComponent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:20074:13)
    at beginWork (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:21587:16)
    at HTMLUnknownElement.callCallback (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:4164:14)
    at HTMLUnknownElement.callTheUserObjectsOperation (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\generated\idl\EventListener.js:26:30)
    at innerInvokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:360:16)
    at invokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:296:3)
    at HTMLUnknownElementImpl._dispatch (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:243:9)
    at HTMLUnknownElementImpl.dispatchEvent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:114:17)
Error: Neural Spike Detected! Simulation crash.
    at BuggyComponent (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/components/ErrorBoundary.test.tsx:8:15)
    at renderWithHooks (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:16305:18)
    at mountIndeterminateComponent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:20074:13)
    at beginWork (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:21587:16)
    at HTMLUnknownElement.callCallback (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:4164:14)
    at HTMLUnknownElement.callTheUserObjectsOperation (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\generated\idl\EventListener.js:26:30)
    at innerInvokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:360:16)
    at invokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:296:3)
    at HTMLUnknownElementImpl._dispatch (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:243:9)
    at HTMLUnknownElementImpl.dispatchEvent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:114:17)
Error: Neural Spike Detected! Simulation crash.
    at BuggyComponent (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/components/ErrorBoundary.test.tsx:8:15)
    at renderWithHooks (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:16305:18)
    at mountIndeterminateComponent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:20074:13)
    at beginWork (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:21587:16)
    at HTMLUnknownElement.callCallback (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:4164:14)
    at HTMLUnknownElement.callTheUserObjectsOperation (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\generated\idl\EventListener.js:26:30)
    at innerInvokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:360:16)
    at invokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:296:3)
    at HTMLUnknownElementImpl._dispatch (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:243:9)
    at HTMLUnknownElementImpl.dispatchEvent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:114:17)
Error: Neural Spike Detected! Simulation crash.
    at BuggyComponent (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/components/ErrorBoundary.test.tsx:8:15)
    at renderWithHooks (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:16305:18)
    at mountIndeterminateComponent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:20074:13)
    at beginWork (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:21587:16)
    at HTMLUnknownElement.callCallback (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:4164:14)
    at HTMLUnknownElement.callTheUserObjectsOperation (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\generated\idl\EventListener.js:26:30)
    at innerInvokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:360:16)
    at invokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:296:3)
    at HTMLUnknownElementImpl._dispatch (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:243:9)
    at HTMLUnknownElementImpl.dispatchEvent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:114:17)
Error: Neural Spike Detected! Simulation crash.
    at BuggyComponent (C:/Users/Home Office_PC/.gemini/antigravity/playground/tadpole-os/src/components/ErrorBoundary.test.tsx:8:15)
    at renderWithHooks (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:16305:18)
    at mountIndeterminateComponent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:20074:13)
    at beginWork (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:21587:16)
    at HTMLUnknownElement.callCallback (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\react-dom\cjs\react-dom.development.js:4164:14)
    at HTMLUnknownElement.callTheUserObjectsOperation (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\generated\idl\EventListener.js:26:30)
    at innerInvokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:360:16)
    at invokeEventListeners (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:296:3)
    at HTMLUnknownElementImpl._dispatch (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:243:9)
    at HTMLUnknownElementImpl.dispatchEvent (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\node_modules\jsdom\lib\jsdom\living\events\EventTarget-impl.js:114:17)
 [32mΓ£ô[39m src/components/ErrorBoundary.test.tsx [2m([22m[2m4 tests[22m[2m)[22m[32m 298[2mms[22m[39m
 [32mΓ£ô[39m src/pages/Settings.test.tsx [2m([22m[2m4 tests[22m[2m)[22m[33m 813[2mms[22m[39m
     [33m[2mΓ£ô[22m[39m updates local state when changing form fields [33m 325[2mms[22m[39m
 [32mΓ£ô[39m tests/server/skills/fs.test.ts [2m([22m[2m4 tests[22m[2m)[22m[32m 72[2mms[22m[39m
 [32mΓ£ô[39m tests/server/oversight.test.ts [2m([22m[2m3 tests[22m[2m)[22m[32m 14[2mms[22m[39m
 [32mΓ£ô[39m src/services/workspaceStore.test.ts [2m([22m[2m4 tests[22m[2m)[22m[32m 9[2mms[22m[39m
[90mstdout[2m | tests/server/phase30.test.ts
[22m[39m≡ƒÅ¢∩╕Å  [Governor] Service Activated. Monitoring network throughput.

[90mstdout[2m | tests/server/phase30.test.ts[2m > [22m[2mPhase 30: System Intelligence Verification[2m > [22m[2mMission-Aware Oversight[2m > [22m[2mshould propagate clusterId from runner to oversight
[22m[39m≡ƒöä Turn 1: Generating...

[90mstdout[2m | tests/server/phase30.test.ts[2m > [22m[2mPhase 30: System Intelligence Verification[2m > [22m[2mMission-Aware Oversight[2m > [22m[2mshould propagate clusterId from runner to oversight
[22m[39m≡ƒöÆ Requesting oversight for tool: 9a49c389-2280-4657-8619-e040f3c38f76 (test-skill)

 [32mΓ£ô[39m tests/commandProcessor.test.ts [2m([22m[2m7 tests[22m[2m)[22m[32m 17[2mms[22m[39m
 [32mΓ£ô[39m tests/server/phase30.test.ts [2m([22m[2m4 tests[22m[2m)[22m[32m 59[2mms[22m[39m
 [32mΓ£ô[39m tests/eventBus.test.ts [2m([22m[2m6 tests[22m[2m)[22m[32m 9[2mms[22m[39m
 [32mΓ£ô[39m tests/settingsStore.test.ts [2m([22m[2m6 tests[22m[2m)[22m[32m 7[2mms[22m[39m
 [32mΓ£ô[39m tests/handoff.test.ts [2m([22m[2m1 test[22m[2m)[22m[32m 6[2mms[22m[39m
 [32mΓ£ô[39m src/services/providerStore.test.ts [2m([22m[2m3 tests[22m[2m)[22m[32m 9[2mms[22m[39m

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ» Failed Tests 2 ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»

 FAIL  tests/server/gateway.test.ts > Gateway > oversight decision route should notify oversight gate
TypeError: Cannot read properties of undefined (reading '1')
 Γ¥» tests/server/gateway.test.ts:251:102
    249|         const res = { json: vi.fn() };
    250| 
    251|         const handler = mockApp.post.mock.calls.find((call: any) => caΓÇª
       |                                                                                                      ^
    252|         handler(req, res);
    253| 

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[1/2]ΓÄ»

 FAIL  tests/server/gateway.test.ts > Gateway > oversight governance route should set governance
TypeError: Cannot read properties of undefined (reading '1')
 Γ¥» tests/server/gateway.test.ts:271:108
    269|         const res = { json: vi.fn() };
    270| 
    271|         const handler = mockApp.post.mock.calls.find((call: any) => caΓÇª
       |                                                                                                            ^
    272|         handler(req, res);
    273| 

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[2/2]ΓÄ»


[2m Test Files [22m [1m[31m1 failed[39m[22m[2m | [22m[1m[32m17 passed[39m[22m[90m (18)[39m
[2m      Tests [22m [1m[31m2 failed[39m[22m[2m | [22m[1m[32m86 passed[39m[22m[90m (88)[39m
[2m   Start at [22m 19:47:33
[2m   Duration [22m 20.78s[2m (transform 4.83s, setup 8.85s, import 10.54s, tests 9.24s, environment 72.60s)[22m

